# tlauncher-compose

./: Makefile  README.md  cli.py  create-shortcut.ps1  gui.py  minecraft.py  pyproject.toml  requirements-dev.txt
.github/workflows/: container-build.yml  python-lint.yml
core/: composer.py  config.py  container.py  detector.py  validator.py
